--- a/.github/workflows/pipeline..yml
+++ b/.github/workflows/pipeline..yml
@@ -15,7 +15,7 @@ jobs:
         run: <add_code_here>
       - name: Upload Dataset to Hugging Face Hub
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.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 }}
         run: python  /content/tourism_project/model_building/data_register.py
 
   data-prep:
@@ -27,7 +27,7 @@ jobs:
         run: <add_code_here>
       - name: Run Data Preparation
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.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 }}
         run: python /content/tourism_project/model_building/prep.py
 
 
@@ -44,7 +44,7 @@ jobs:
           sleep 5  # Wait for a moment to let the server starts
       - name: Model Building
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.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 }}
         run: <add_code_here>
 
 
@@ -57,5 +57,5 @@ jobs:
         run: <add_code_here>
       - name: Push files to Frontend Hugging Face Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_TOKEN: ${{ secrets.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 }}
         run: python /content/tourism_project/hosting/hosting.py
