--- a/.github/workflows/pipeline..yml
+++ b/.github/workflows/pipeline..yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
-        run: <add_code_here>
+        run: pip install -r /content/tourism-project2/tourism-project/requirements.txt
       - name: Upload Dataset to Hugging Face Hub
         env:
           HF_TOKEN: ${{ secrets.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 }}
